stylecontext: fix a StyleData refleak

We were failing to unref the style data in some code paths.

https://bugzilla.gnome.org/show_bug.cgi?id=683627